# learn-opengl

./: .gitignore  CMakeLists.txt
cmake/modules/: FindGLFW3.cmake
includes/glad/: glad.h
src/: glad.c
src/1.getting_started/1.hello_window/: hello_window.cpp
src/1.getting_started/2.hello_triangle/: hello_triangle.cpp
